tools/tests/errors/path_join_empty.ki
var path = import("path")
discard path.join()
